--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.brisca.core'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = '1.8'
 
 configurations {
@@ -18,6 +18,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+	jcenter()
 	maven { url 'https://repo.spring.io/snapshot' }
 	maven { url 'https://repo.spring.io/milestone' }
 }
@@ -78,6 +79,12 @@ compileTestKotlin {
 		jvmTarget = '1.8'
 	}
 }
+
+sourceSets {
+	main.java.srcDirs += 'src/main/kotlin'
+}
+
+
 
 test {
 	useJUnitPlatform()
