--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,10 @@ brisca:
     secret: ChkJXWvcspEVoiIQa5OaDZxXaHdM9YbW
     expiration: 3000
 
+cosmos-client:
+  baseUrl: https://briscas.documents.azure.com:443/
+  appId: cosmos_db
+  environment: nonprod
+  svcId: master
+  svcPassword: ${COSMOS_DB_PASSWORD}
+  retrycount: 2
