--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
+	id 'org.springframework.boot' version '2.1.6.BUILD-SNAPSHOT'
 	id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
 }
@@ -31,34 +31,26 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation  'org.springframework.boot:spring-boot-starter-webflux'
+//	implementation  group:'io.netty', name:'netty-tcnative', version:'2.0.0.Final', classifier: ${os.detected.classifier}
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	implementation 'org.springframework.boot:spring-boot-starter-integration'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-//	implementation 'org.springframework.boot:spring-boot-starter-amqp'
-//	implementation 'org.springframework.cloud:spring-cloud-starter'
-//	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
-//	implementation 'org.springframework.cloud:spring-cloud-stream-reactive'
-//	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-support'
 
-	compile("io.github.resilience4j:resilience4j-all:${resilience4jVersion}")
-	compile("io.github.resilience4j:resilience4j-reactor:${resilience4jVersion}")
-	compile("io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}")
-
-
-//	implementation 'org.postgresql:postgresql:42.2.5'
-//	runtimeOnly 'org.postgresql:postgresql'
-//	implementation 'com.github.davidmoten:rxjava2-jdbc:0.2.4'
-//	compile "io.projectreactor.addons:reactor-adapter:3.2.2.RELEASE"
+	implementation  'com.microsoft.azure:azure-cosmosdb-spring-boot-starter:2.1.6'
+//	implementation  'com.microsoft.azure:spring-data-cosmosdb:3.0.0.M1'
+//  Wait for v3
+//	implementation  group: 'com.microsoft.azure', name: 'azure-cosmosdb', version: '3.0.0-beta-3'
+//	implementation  group: 'io.reactivex', name: 'rxjava-reactive-streams', version: '1.2.1'
 
 	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 	testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
 
-	compile 'io.jsonwebtoken:jjwt-api:0.10.5'
+	implementation  'io.jsonwebtoken:jjwt-api:0.10.5'
 	runtime 'io.jsonwebtoken:jjwt-impl:0.10.5',
 			'io.jsonwebtoken:jjwt-jackson:0.10.5'
 	compileOnly 'org.projectlombok:lombok'
@@ -66,12 +58,6 @@ dependencies {
 
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation("org.junit.jupiter:junit-jupiter:5.4.1")
-}
-
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
 }
 
 compileKotlin {
